# looperr

./: .Rbuildignore  .Rhistory  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  configure  configure.ac
.github/workflows/: R-CMD-check.yaml
R/: RcppExports.R  linsmooth.R  looperr.R
examples/: benchmarking.R  benchmarking.do  benchmarking_plots.R  examples.R
inst/: AUTHOR
man/: fastols.Rd  fastols2.Rd  fastols_by.Rd  fastols_bywt.Rd  fastolswt.Rd  linsmooth.Rd  loclin.Rd  loclin_by.Rd  loclin_diffX.Rd  loclin_diffX_unif.Rd  loclin_gauss.Rd  loclin_sameX.Rd  loclin_sameX_unif.Rd  loclin_sameX_unif_by.Rd  loocv.Rd  loocv_gauss.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  example.cpp  loo_linear.cpp  loo_loclin.cpp  looperr_init.c  myomp.h
tests/: simulate.R  testthat.R
tests/testthat/: .Rhistory  test_linsmooth.R  test_loo_linear.R  test_loo_loclin.R
